# practice

./: README.md
busterm/: CMakeLists.txt
busterm/src/: busterm.c
busterm_cpp/: CMakeLists.txt
busterm_cpp/src/: busterm.cpp
islands/: CMakeLists.txt  Makefile
islands/src/: countIslands.c  countIslands.h  defines.h  islands.c
islands/test/: test_countIslands.c
islands_cpp/: CMakeLists.txt  main.cpp
islands_cpp/inc/: countIslands.hpp
islands_cpp/src/: countIslands.cpp
islands_cpp/test/: CMakeLists.txt  countIslands_test.cpp
minsum/: CMakeLists.txt
minsum/src/: minsum.c
roman/: CMakeLists.txt  Makefile
roman/src/: main.c  romanenc.c  romanenc.h
roman/test/: test_adv.c  test_fixed.c  test_sample.c
skyscraper/: CMakeLists.txt
skyscraper/src/: skyscraper.c
wheat/: CMakeLists.txt
wheat/src/: wheat.c
